--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <p class="four"></p>
       <p class="five"></p>
       <p class="six"></p>
+      <img class="imgFive" src="" alt="">
     </div>
 
     </div>
