--- a/index.html
+++ b/index.html
@@ -3,35 +3,56 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="assets/css/style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <title></title>
   </head>
   <body>
 
     <br>
     <div class="container">
-      <h2>Pokedex</h2>
+
+      <h2></h2>
 
       <form>
-        <label for="name">name</label><br>
-        <input type="name" id="name" name="name"><br>
         <button class="search" type='button' name='button'>Search</button>
+        <label for="name"></label><br>
+        <input type="name" id="name" name="name"><br>
       </form>
 
       <br>
       <img class="imgOne" src="" alt="">
-      <img class="imgTwo" src="" alt="">
+      <!-- <img class="imgTwo" src="" alt="">
+      <br>
       <img class="imgThree" src="" alt="">
-      <img class="imgFour" src="" alt="">
-      <br><br>
-      <h3></h3>
+      <img class="imgFour" src="" alt=""> -->
+
+
     <div class="info">
-      <p class="one"></p>
-      <p class="two"></p>
-      <p class="three"></p>
-      <p class="four"></p>
-      <p class="five"></p>
+      <div class="idName">
+
+        <p class="one"></p>
+        <h3></h3>
+      </div>
+
+      <div class="moveSet">
+        <div class="moveSet1">
+          <p class="two"></p>
+          <p class="three"></p>
+        </div>
+
+        <div class="moveSet1">
+          <p class="four"></p>
+          <p class="five"></p>
+        </div>
+      </div>
+
       <p class="six"></p>
       <img class="imgFive" src="" alt="">
+      <p class="seven"></p>
+      <p class="eight"></p>
+      <p class="nine"></p>
+
+
     </div>
 
     </div>
