--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
   <body>
 
     <br>
+
     <div class="container">
 
-      <h2></h2>
+      <h2 class="h2One">GAME BOY</h2>
+      <div class="powerLed"></div>
+      <div class="color">
+        <p class="C">C</p>
+        <p class="O1">O</p>
+        <p class="L">L</p>
+        <p class="O2">O</p>
+        <p class="R">R</p>
+      </div>
 
       <form>
         <button class="search" type='button' name='button'>Search</button>
