--- a/index.html
+++ b/index.html
@@ -39,31 +39,26 @@
 
     <div class="info">
       <div class="idName">
-
-        <p class="one"></p>
+        <p class="id"></p>
         <h3></h3>
       </div>
 
       <div class="moveSet">
         <div class="moveSet1">
-          <p class="two"></p>
-          <p class="three"></p>
+          <p class="move1"></p>
+          <p class="move2"></p>
         </div>
 
         <div class="moveSet1">
-          <p class="four"></p>
-          <p class="five"></p>
+          <p class="move3"></p>
+          <p class="move4"></p>
         </div>
       </div>
 
-
-
-      <p class="six"></p>
-      <p class="seven"></p>
-      <p class="eight"></p>
-      <p class="nine"></p>
-
-
+      <p class="prevEvo"></p>
+      <p class="flavorText"></p>
+      <p class="height"></p>
+      <p class="weight"></p>
     </div>
 
     </div>
